Bug 169817 - Data provider inserts into wrong sheet
Summary: Data provider inserts into wrong sheet
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0 target:25.8.5
Keywords:
Depends on:
Blocks: Data-Provider
  Show dependency treegraph
 
Reported: 2025-12-03 22:01 UTC by Regina Henschel
Modified: 2025-12-05 14:10 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Target document with two sheets (7.65 KB, application/vnd.oasis.opendocument.spreadsheet)
2025-12-03 22:01 UTC, Regina Henschel
Details
csv file to be imported (139 bytes, application/vnd.ms-excel)
2025-12-03 22:02 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2025-12-03 22:01:48 UTC
Created attachment 204416 [details]
Target document with two sheets

Copy the attached document and the csv-file to your PC.

Open the document. It has two sheets. For each sheet a database range is defined. The affected cell areas are styled with a border. To verify, that the database ranges are indeed defined with that area you can use menu Data > Select Range.

Go to menu Data > Data Provider...
In field Database Range select "Second"
In field Data Format select CSV
For field URL use the Browse button and select the downloaded csv-file.
Click OK button.

Examine the document. You will find the imported data not on Sheet2 but on Sheet1.
Comment 1 Regina Henschel 2025-12-03 22:02:36 UTC
Created attachment 204417 [details]
csv file to be imported
Comment 2 m_a_riosv 2025-12-04 00:50:33 UTC
The sheet is wrong, but the range is right.

Reproducible;:
Version: 26.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 620(Build:0)
CPU threads: 16; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: threaded
Comment 3 Regina Henschel 2025-12-04 13:09:35 UTC
The wrong sheet slipped in with commit 2f2d41d101e0790ea50be3df7d14224357f3f9fb.

Proposed fix is in https://gerrit.libreoffice.org/c/core/+/194997
Comment 4 Commit Notification 2025-12-04 14:48:25 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/13625af3857ae00d341871767b29dbc629d578e0

tdf#169817 dataprovider insert to correct sheet

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2025-12-04 15:57:35 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/f9e5580569e3ad705d19fe74faeedb56a9ecc4b2

tdf#169817 dataprovider insert to correct sheet

It will be available in 25.8.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2025-12-05 14:10:44 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3e15e0e298cdd36b378ab5bad0f9bb618a89ae1a

tdf#169817: sc: Add UItest

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.