tdf#169817 dataprovider insert to correct sheet

Change-Id: I6bd0991cff314abff615371ddba3aa978a442df5
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/194997
Reviewed-by: Regina Henschel <rb.henschel@t-online.de>
Tested-by: Jenkins